--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Test git</title>
 </head>
+
+<header>
+    <h1>Nouveau header</h1>
+</header>
 <body>
     <h1>something</h1>
-    <h3></h3>
+    <h3>test for change</h3>
 </body>
 </html>
