--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,66 @@
     <h2>header h2</h2>
 </header>
 <body>
-    <h1>something</h1>
-    <h3>test for change</h3>
+    <main>
+
+        Dans section Ecole :
+        
+            1 Set-Location -literalPath 'C:\Users\e1424017\Desktop\ecole'
+            2 git init
+            3 git status
+            4 git config --global core.editor "code -- wait"
+            5 git config --global -e
+            6 get history
+            7 Get-History
+            8 Get-History
+            9 dir
+           10 dir
+           11 git add --all
+           12 git status
+           13 git commit -m "debut fichier index.htm et style.css"
+           14 git status
+           15 git status
+           16 git add .
+           17 git status
+           18 hit status -s
+           19 git status -s
+           20 git commit -m "E"
+           21 git status
+           22 git remote add origin https://github.com/Aznavour-prog/exec3.git
+           23 git remote -v
+           24 git push -u origin master
+           25 git push -u origin master
+           26 git pull origin master
+           27 git status
+           28 git add .
+           29 git commit -m "Couleur de background dans le header"
+
+        Dans section Maison :
+
+        1 Set-Location -literalPath 'C:\Users\e1424017\Desktop\maison'
+   2 git init
+   3 git status
+   4 dir
+   5 dir
+   6 git remote add origin https://github.com/Aznavour-prog/exec3.git
+   7 git remove -v
+   8 git remote -v
+   9 git pull origin master
+  10 git status
+  11 git add .
+  12 git status
+  13 git commit -m "M - h1 dans le header"
+  14 git status
+  15 git status
+  16 git add .
+  17 git commit -m "M - h2 dans le header avec sous-titre"
+  18 git status
+  19 git add .
+  20 git status
+  21 git commit -m "Une bordure autour du header"
+  22 git push -u origin master
+    </main>
+    
 </body>
+
 </html>
