Un contenu a été ajouté dans main et footer

--- a/index.htm
+++ b/index.htm
@@ -50,8 +50,8 @@
         Dans section Maison :
 
         1 Set-Location -literalPath 'C:\Users\e1424017\Desktop\maison'
-   2 git init
-   3 git status
+         2 git init
+        3 git status
    4 dir
    5 dir
    6 git remote add origin https://github.com/Aznavour-prog/exec3.git
@@ -71,10 +71,12 @@
   20 git status
   21 git commit -m "Une bordure autour du header"
   22 git push -u origin master
+  <p>contenu ajouté école</p>
     </main>
     
 </body>
 <footer>
     <p>footer classique</p>
+    <p>Contenu ajouté école</p>
 </footer>
 </html>
