--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,21 @@
 <header>
     <h1>Nouveau header</h1>
     <h2>header h2</h2>
+    <nav id='menu'>
+        <input type="text" id="inputRecherche" placeholder="recherche ici">
+        <input id="checkMenu" type="checkbox">
+        <label id="btnMenu" for="checkMenu">&#9776;</label>
+        <ul >
+            <li><a href="">Lorem</a></li>
+            <li><a href="">Vero</a></li>
+            <li><a href="">Aperiam</a></li>
+            <li><a href="">Reprehenderit</a></li>
+            <li><a href="">Incidunt</a></li>
+            <li><a href="">Est</a></li>
+        </ul>
+
+
+</nav>
 </header>
 <body>
     <main>
