ajout des objets html qui vont être animer et ajout des deux fichier de classes css pour la POO

--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,8 @@
         <section class="global">
             <h1>Motivation pour le TP1 : </h1>
             <p class="resumetp1">En fait pour le TP1 j'ai voulu faire une petite application qui me serait peut-etre utile pour faire les organisations de mes travaux, je pourrais aussi y trouver l'exercice de l'horaire que j'avais fait ainsi que les outils que j'utilise pour aller chercher mes dossiers important</p>
-            
+            <div class="objetAnimer"></div>
+            <div class="objetAnimer1"></div>
         </section>
     </main>
 
