ajout de l'objet que je vais animer et parent a la section global

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One|Roboto&display=swap" rel="stylesheet">
-   
+    <script src="/js/objetAnimer.class.js"></script>
 </head>
 
 <body>
@@ -95,7 +95,7 @@
             }
         })
     })
-    
-
+    var oRectangle = new oRectangleanimer(100,100);
+    console.log(oRectangle);
 </script>
 </html>
