--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One|Roboto&display=swap" rel="stylesheet">
     <script src="/js/objetAnimer.class.js"></script>
+    <script src="js/objetAnimerNo2.class.js"></script>
 </head>
 
 <body>
@@ -96,6 +97,7 @@
         })
     })
     var oRectangle = new oRectangleanimer(50,100,0,0);
+    var oRectangle2 = new oRectangleanimerDown(50,100,0,50);
     console.log(oRectangle);
 </script>
 </html>
