ajout du nouveau rectangle pour l'animation

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poiret+One|Roboto&display=swap" rel="stylesheet">
     <script src="/js/objetAnimer.class.js"></script>
     <script src="js/objetAnimerNo2.class.js"></script>
+    <script src="js/objetAnimer3.class.js"></script>
 </head>
 
 <body>
@@ -98,6 +99,7 @@
     })
     var oRectangle = new oRectangleanimer(50,100,0,0);
     var oRectangle2 = new oRectangleanimerDown(50,100,0,50);
-    console.log(oRectangle);
+    var oRectangle3 = new oRectangleanimerHorizontal(5,15,0,48);
+    
 </script>
 </html>
