ajout de div slider

--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
     <main class="global">
         <h1>Bienvenue sur le site de Metallica!</h1>
         <div class="carousel_main mon-slider">
-
+            <div class="slider">
 			<!-- Slideshow -->
 			<div class="mySlides" style="display: none;">
 				<img src="img/images/image1.jpg" style="width:100%;">
@@ -58,7 +58,8 @@
 				<span class="slider_btns" onclick="currentDiv(3)"></span>
 				<span class="slider_btns" onclick="currentDiv(4)"></span>
 
-			</div>
+            </div>
+        </div>
     </main>
     
 </main>
